--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,57 @@
     transform: rotate(360deg);
   }
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f2f0e4;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title {
+  font-size: 2em;
+  margin-bottom: 20px;
+}
+
+.input-container {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.input {
+  width: 300px;
+  padding: 10px;
+  border: none;
+  border-bottom: 2px solid #000;
+  background-color: transparent;
+  font-size: 1.2em;
+  transition: border-bottom-color 0.3s;
+}
+
+.input:focus {
+  outline: none;
+  border-bottom-color: #007bff; /* Cambia el color cuando el campo está enfocado */
+}
+
+.button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.2em;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #0056b3; /* Cambia el color al pasar el cursor sobre el botón */
+}
