front megaterminadix (falta hacerle la parte del backend)

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -107,3 +107,7 @@
   margin:10px;
 }
 
+.animate__caja {
+  animation-delay: 1.5s; /* Delay de 1.5 segundos */
+  animation-duration: 1.5s; /* Duración de la animación */
+}
