--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -111,7 +111,12 @@
     overflow: hidden; /* Oculta el texto que se desborde */
     text-overflow: ellipsis;
     cursor: pointer;
+}
 
+.publicar-button:hover{
+    background-color: #bf4c41;
+    color:#f2f0e4;
+    transition: color 0.2s;
 }
 
 .cerrar-sesion-button{
@@ -270,22 +275,6 @@ a {
     border-radius: 0.5px;
 }
 .configuration-link{
-    border-radius: 0.5;
+    border-radius: 0.5px;
 }
 
-.post-link {
-    padding: 8px 145px;
-    font-size: 1.5em;
-    background-color: #a67c63;
-    border-color: #f2ada7;
-    color: #f2f0e4; /* Asegúrate de que el color del texto sea visible */
-}
-
-.post-link:hover {
-    background-color: #734429;
-    color: #f2f0e4;
-}
-
-.post-link:active {
-    transform: translateY(2px);
-}
