--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -54,6 +54,12 @@
     cursor: pointer;
 }
 
+.menu-button:hover{
+    background-color: #a67c63;
+    color:#f2f0e4;
+    transition: color 0.2s;
+}
+
 .buscar-button{
     position: absolute;
     top: 4vh;
@@ -119,6 +125,7 @@
     transition: color 0.2s;
 }
 
+
 .cerrar-sesion-button{
     position: absolute;
     top: 80vh;
@@ -134,6 +141,12 @@
     overflow: hidden; /* Oculta el texto que se desborde */
     text-overflow: ellipsis;
     cursor: pointer;
+}
+
+.cerrar-sesion-button:hover{
+    background-color: #bf4c41;
+    color:#f2f0e4;
+    transition: color 0.2s;
 }
 
 
@@ -240,12 +253,20 @@ a {
     height: 5.5%;
     color:#f2f0e4;
     background-color: #bf4c41;
-    border-color: #bf4c41;
+    border-color:#a67c63;
     font-size: large;
     overflow: hidden; /* Oculta el texto que se desborde */
     text-overflow: ellipsis;
     cursor: pointer;
 }
+
+.form-button:hover{
+    background-color: #a67c63;
+    color:#f2f0e4;
+    transition: color 0.2s;
+    
+}
+
 
 .texto-caracteristicas-menu-negritas{
     margin-top: 2px;
