--- a/src/styles/adminView.css
+++ b/src/styles/adminView.css
@@ -6,6 +6,7 @@
     margin: 5% 5% 0% 12%; /* Centra el contenedor horizontalmente */
     border-radius: 25px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    background-color: #f2ada7;
 }
 
 .employee-list-container{
@@ -42,3 +43,8 @@
     margin-left: 5% ;
 }
 
+
+
+body {
+    background-color:#f2f0e4 ;
+}
