--- a/src/styles/adminView.css
+++ b/src/styles/adminView.css
@@ -9,7 +9,7 @@
     background-color: #f2ada7;
 }
 
-.employee-list-container{
+.employee-list-container {
     border: 1px solid #ccc;
     border-radius: 20px;
     margin-right: 0%;
@@ -17,7 +17,9 @@
     display: inline-block; /* Hace que los contenedores se muestren en línea */
     vertical-align: top; /* Alinea los contenedores en la parte superior */
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    overflow-y: auto; /* Agregado para mostrar la barra de desplazamiento vertical cuando sea necesario */
 }
+
 
 .center-button-admin {
     display: flex;
@@ -43,8 +45,27 @@
     margin-left: 5% ;
 }
 
+.add-branch-container{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    width: 20%; /* Cambiado el ancho para dar espacio a ambos contenedores */
+    display: inline-block; /* Hace que los contenedores se muestren en línea */
+    vertical-align: top; /* Alinea los contenedores en la parte superior */
+    margin-left: 5% ;
+}
+
 body {
     background-color:#f2f0e4 ;
 }
 
 
+.add-remove-branch-container{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    width: 20%; /* Cambiado el ancho para dar espacio a ambos contenedores */
+    display: inline-block; /* Hace que los contenedores se muestren en línea */
+    vertical-align: top; /* Alinea los contenedores en la parte superior */
+    margin-left: 5% ;
+}
