--- a/src/styles/adminView.css
+++ b/src/styles/adminView.css
@@ -9,7 +9,7 @@
     background-color: #f2ada7;
 }
 
-.employee-list-container {
+.employee-list-container{
     border: 1px solid #ccc;
     border-radius: 20px;
     margin-right: 0%;
@@ -17,9 +17,8 @@
     display: inline-block; /* Hace que los contenedores se muestren en línea */
     vertical-align: top; /* Alinea los contenedores en la parte superior */
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    overflow-y: auto; /* Agregado para mostrar la barra de desplazamiento vertical cuando sea necesario */
+    overflow-y: auto;
 }
-
 
 .center-button-admin {
     display: flex;
@@ -68,4 +67,10 @@ body {
     display: inline-block; /* Hace que los contenedores se muestren en línea */
     vertical-align: top; /* Alinea los contenedores en la parte superior */
     margin-left: 5% ;
+    
+}
+
+.add-remove-branch-container input,.add-remove-branch-container button{
+    margin: 3% auto !important;
+
 }
