--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -1,16 +1,20 @@
+*{}
+
 .container-signup {
     background: url("../logo_1/FONDO_LOGIN.png") no-repeat center;
     background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
+    position: fixed;
+    
 }
 
 .container-signup .titulo{
     font-size: 6em;
     text-align: center;
     font-weight: bold;
+    
 }
 
 .container-signup .subtitulo{
@@ -19,6 +23,7 @@
     margin-bottom: 2rem;
     font-size: 1.5em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    
 }
 
 .container-signup .cajaFormulario{ 
@@ -31,6 +36,7 @@
     border-radius: 1rem;
     border-color: black;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    
 }
 
 .container-signup form{ /* Formulario */
@@ -41,6 +47,7 @@
     position: fixed;
     font-size: 1.4rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
 }
 
 .container-signup .formIzq, .formDer {
@@ -59,8 +66,8 @@
 }
 
 .container-signup select {
-    width: 15rem;
-    height: 2rem;
+    align-self: center;
+
     font-size: 1rem;
 }
 
@@ -74,8 +81,16 @@
 .container-signup button {
     height: 2rem;
     font-size: 1rem;
-    border-radius: 0.2rem;
+    border-radius: 15px;
+    background-color: #bf4c41;
+    color: #f2f0e4;
 }
+
+.container-signup button:hover{
+    background-color: #f2f0e4;
+    color: #bf4c41;
+}
+
 
 .container-signup form div {
     margin-bottom: 1.5rem;
@@ -88,4 +103,19 @@
     height: 100vh;
     max-width: 1920px;
     max-height: 1080px;
+}
+
+.input-user{
+    border-radius: 15px;
+    text-align: center;
+    border: none;
+    padding: 10px;
+    font-size:small;
+    
+}
+
+.input-select-sucursal{
+    border-radius: 15px;
+    width: 48%;
+    
 }
