--- a/src/styles/PostDetailStyle.css
+++ b/src/styles/PostDetailStyle.css
@@ -42,8 +42,7 @@
     color: #5C4B51;
     /* Marrón oscuro */
     margin-bottom: 20px;
-    max-width: 100px;
-    
+    max-width: 600px;
 }
 
 .post-date {
@@ -90,16 +89,14 @@
     height: 2.2em;
     /* Ajusta la altura según sea necesario */
     font-size: large;
-    width: 86%;
-    margin-right: 1%;
-    
+    width: 99%;
     
 }
 
 .comment-button{
     border-radius: 15px;
     height: 4.5vh;
-    width: 12.3%;
+    width: 99.6%;
     border:none;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     background-color:#bf4c41;
@@ -132,3 +129,6 @@
 }
 
 
+.margenhr{
+    margin-top: -15px;
+}
