--- a/src/styles/PostDetailStyle.css
+++ b/src/styles/PostDetailStyle.css
@@ -15,13 +15,13 @@
     padding: 2vw;
 }
 
-
-
 .imagen-preview-detail {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
+    max-width: 50%;
     vertical-align: middle;
+    margin-left: 28%;
 }
 
 
