arreglo bugs y agrego restriccion de edad

--- a/src/styles/PostDetailStyle.css
+++ b/src/styles/PostDetailStyle.css
@@ -166,7 +166,11 @@
     font-size: 14px;
 }
 
-.reply-button:hover {
+.reply-button:disabled {
+    background-color: grey;
+}
+
+.reply-button:enabled:hover {
     background-color: #45a049;
 }
 
