--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,36 +1,11 @@
-.menu-button {
-    position: absolute;
-    top: 2vh;
-    left: 3vw;
-    z-index: 9999;
-    border-radius: 15px;
-    width: 6%;
-    height: 3%;
-    color: #f2f0e4;
-    background-color: #a67c63;
-    border-color: #a67c63;
-    font-size: large;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    cursor: pointer;
-}
-
-
-.menu-button:hover {
-    background-color: #bf4c41;
-    color: #f2f0e4;
-    transition: color 0.2s;
-}
-
 .publicar-button {
     position: absolute;
     top: 2vh;
     left: 80%;
     z-index: 9999;
+    width: 120px;
+    height: 40px;
     border-radius: 15px;
-    width: 6%;
-    height: 3%;
-    margin-bottom: 10%;
     color: #f2f0e4;
     background-color: #a67c63;
     border-color: #a67c63;
@@ -47,40 +22,68 @@
 }
 
 
-
 .backgroundHome {
     position: relative;
     /* Asegura que el menú esté posicionado correctamente dentro de este contenedor */
 }
 
 .rectangle {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100px;
-    /* Altura del rectángulo */
     background-color: #f2ada7;
-    /* Color del rectángulo */
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    z-index: 1;
+}
+
+.menu-button {
+    position: absolute;
+    top: 2vh;
+    left: 3vw;
+    z-index: 9999;
+    border-radius: 15px;
+    width: 120px;
+    /* Ajusta el ancho según sea necesario */
+    height: 40px;
+    color: #f2f0e4;
+    background-color: #a67c63;
+    border-color: #a67c63;
+    font-size: large;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    cursor: pointer;
+}
+
+.menu-button:hover {
+    background-color: #bf4c41;
+    color: #f2f0e4;
+    transition: color 0.2s;
 }
 
 .menu {
-    position: absolute;
+    z-index: 10;
+    position: fixed;
     top: 100px;
-    /* Coloca el menú justo debajo del rectángulo */
     left: 0;
-    background-color: white;
+    background-color: #f2ada7;
     padding: 10px;
     display: none;
     font-size: large;
+    width: 250px;
+    /* Ajusta el ancho del menú */
+    height: calc(100vh - 100px);
+    /* Altura del menú para ocupar toda la pantalla menos el rectángulo */
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    overflow-y: auto;
+    /* Permite el desplazamiento si el contenido es demasiado grande */
 }
 
 .menu.open {
     display: block;
-    width: 10%;
-    height: 100%;
-    background-color: #f2ada7;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-    font-size: large;
 }
+
 
 .menu ul {
     list-style-type: none;
@@ -176,22 +179,21 @@
     text-overflow: ellipsis;
 }
 
+
 .cerrar-sesion-button {
-    position: absolute;
-    top: 80vh;
-    left: 6.5%;
-    z-index: 9999;
-    border-radius: 15px;
-    width: 50%;
-    height: 3%;
+    width: 60%;
+    height: 30px;
+    /* Ajusta la altura según sea necesario */
     color: #f2f0e4;
     background-color: #a67c63;
     border-color: #a67c63;
     font-size: large;
     overflow: hidden;
-    /* Oculta el texto que se desborde */
     text-overflow: ellipsis;
     cursor: pointer;
+    border-radius: 15px;
+    margin-top: 20px;
+    /* Espacio superior para separarlo de otros elementos */
 }
 
 .cerrar-sesion-button:hover {
@@ -200,15 +202,15 @@
     transition: color 0.2s;
 }
 
-
-.logo {
-    position: absolute;
-    left: 90vw;
-    width: 100px;
-    /* Ancho deseado */
-    height: auto;
-    /* Esto permite mantener la proporción de la imagen */
+.posts-container.shifted {
+    transform: translateX(250px);
+    /* Ajusta este valor según el ancho del menú */
+    transition: transform 0.5s ease;
+    /* Transición suave para el desplazamiento */
 }
+
+
+
 
 .title-most-searched {
     left: 11.5%;
@@ -405,6 +407,11 @@ a:hover {
     border-radius: 15px;
     background-color: #f2ada7;
     text-align: center;
+    position: relative;
+    z-index: 2;
+    transition: transform 0.5s ease;
+
+
 }
 
 
@@ -413,6 +420,26 @@ a:hover {
     height: auto;
     max-height: 200px;
     background-size: contain;
-    /* Ajusta este valor según tus necesidades */
     border-radius: 15px;
+}
+
+.logo {
+    position: absolute;
+    right: 50px;
+    top: 0.01px;
+    width: 100px;
+    height: auto;
+    z-index: 1000;
+    /* Ajusta este valor según sea necesario */
+
+}
+
+.success-message {
+    background-color: #4caf50;
+    /* Verde */
+    color: #fff;
+    /* Blanco */
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin-bottom: 20px;
 }
